--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<h1>Understanding Time, Space, and Complexity</h1>
 
-    <p><b>Time Complexity</b> refers to the computational complexity that describes the amount of time it takes to run an algorithm. It gives us an idea of how the algorithm scales with the size of the input.</p>
+    <p><b>Time Complexity refers to the computational complexity that describes the amount of time it takes to run an algorithm. It gives us an idea of how the algorithm scales with the size of the input.</b></p>
 
-    <p><b>Space Complexity</b> is a measure of the amount of working storage an algorithm needs. Understanding <b>Space Complexity</b> helps in optimizing memory usage while writing efficient programs.</p
+    <p><b>Space Complexity is a measure of the amount of working storage an algorithm needs.</b> </p>
     <script type="text/javascript" src="./script.js">
 </script>
 
